--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.71",
+    "normalize.css": "^8.0.1",
     "vue": "^3.0.0",
     "vue-loader-v16": "^16.0.0-beta.5.4",
     "vue-router": "^4.0.0-0",
